--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
             <img src="images/aws.png" alt="Amazon" class="partner-logo">
             <img src="images/samsung.svg" alt="Samsung" class="partner-logo">
             <img src="images/toss.png" alt="Toss" class="partner-logo">
-            <img src="images/tesla.png" alt="Tesla" class="partner-logo">
+            <img src="images/tesla.png" alt="Tesla" class="partner-logo main-logo">
         </div>
     </section>
     <footer class="footer">
