--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
         
         /* ⭐ GJMST 로고만 키우는 클래스 */
         .partner-logo.main-logo {
-            height: 55px; /* 기본(35px)보다 훨씬 크게 설정 */
-            opacity: 0.8; /* 평소에도 조금 더 진하게 */
+            height: 50px; /* 기본(35px)보다 훨씬 크게 설정 */
+            opacity: 0.4; /* 평소에도 조금 더 진하게 */
         }
 
         .partner-logo:hover {
@@ -354,7 +354,7 @@
         </div>
     </main>
     <section class="partner-section">
-        <p class="partner-title">Trusted by Innovative Companies</p>
+        <p class="partner-title">Trusted by the Next Gen</p>
         <div class="logo-grid">
             <img src="images/gjmst.svg" alt="Gjmst" class="partner-logo main-logo">
             <img src="images/aws.png" alt="Amazon" class="partner-logo">
