--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
         }
         .stat-number { font-size: 64px; font-weight: 800; color: var(--primary-color); display: block; line-height: 1; margin-bottom: 10px; }
 
-        /* --- [INFO CARDS SECTION] --- */
+        /* --- [INFO CARDS SECTION - 수정된 부분] --- */
         .info-section {
             padding: 100px 24px;
-            background: #ffffff; /* 흰색 배경으로 통일 */
+            background: #ffffff; /* 요청사항: 배경색 흰색 */
         }
         .info-grid {
             display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -132,22 +132,26 @@
         }
         .info-card {
             padding: 50px 40px; border-radius: 30px; display: flex; flex-direction: column; justify-content: center;
-            transition: transform 0.3s ease, box-shadow 0.3s ease; box-shadow: 0 10px 30px rgba(0,0,0,0.05); border: none;
+            transition: transform 0.3s ease, box-shadow 0.3s ease; 
+            box-shadow: 0 10px 30px rgba(0,0,0,0.05); 
+            border: 1px solid #efefef; /* 테두리 추가로 구분감 부여 */
+            background: #f5f5f7; /* 요청사항: 블럭색 f5f5f7 */
         }
         .info-card:hover { transform: translateY(-5px); box-shadow: 0 20px 40px rgba(0,0,0,0.12); }
         
-        /* Dormitory Edition: 파란색 그라데이션 */
-        .card-dorm { background: linear-gradient(135deg, #0071e3 0%, #00c6fb 100%); color: #ffffff; }
-        .card-dorm h3, .card-dorm p { color: #ffffff !important; }
+        /* Dormitory Edition: 텍스트 색상 변경 */
+        .card-dorm h3 { color: var(--primary-color) !important; font-weight: 800; }
+        .card-dorm p { color: var(--text-main) !important; opacity: 0.8; }
         
-        /* Office Edition: 블랙 */
-        .card-office { background: #1d1d1f; color: #ffffff; }
-        .card-office h3, .card-office p { color: #ffffff !important; opacity: 0.9; }
+        /* Office Edition: 텍스트 색상 변경 */
+        .card-office h3 { color: #1d1d1f !important; font-weight: 800; }
+        .card-office p { color: var(--text-main) !important; opacity: 0.8; }
+
 
         /* --- [APP PREVIEW SECTION] --- */
         .app-section {
             padding: 100px 24px;
-            background: #f5f5f7; /* 다시 회색 배경으로 전환 */
+            background: #f5f5f7;
             overflow: hidden;
         }
         .app-container {
