--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
 
         /* --- [INFO CARDS SECTION - 수정된 부분] --- */
         .info-section {
-            padding: 100px 24px;
-            background: #ffffff; /* 요청사항: 배경색 흰색 */
-        }
+    /* 배경을 회색으로 변경 */
+    background: #f5f5f7; 
+}
         .info-grid {
             display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             max-width: 1100px; margin: 0 auto; gap: 30px;
@@ -135,17 +135,12 @@
             transition: transform 0.3s ease, box-shadow 0.3s ease; 
             box-shadow: 0 10px 30px rgba(0,0,0,0.05); 
             border: 1px solid #efefef; /* 테두리 추가로 구분감 부여 */
-            background: #f5f5f7; /* 요청사항: 블럭색 f5f5f7 */
-        }
+            background: #ffffff;
+		}
         .info-card:hover { transform: translateY(-5px); box-shadow: 0 20px 40px rgba(0,0,0,0.12); }
         
-        /* Dormitory Edition: 텍스트 색상 변경 */
-        .card-dorm h3 { color: var(--primary-color) !important; font-weight: 800; }
-        .card-dorm p { color: var(--text-main) !important; opacity: 0.8; }
-        
-        /* Office Edition: 텍스트 색상 변경 */
-        .card-office h3 { color: #1d1d1f !important; font-weight: 800; }
-        .card-office p { color: var(--text-main) !important; opacity: 0.8; }
+		.card-dorm h3, .card-office h3 { color: #1d1d1f !important; }
+		.card-dorm p, .card-office p { color: var(--text-main) !important; }
 
 
         /* --- [APP PREVIEW SECTION] --- */
