--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
         <div class="logo-grid">
             <img src="images/gjmst.svg" alt="Gjmst" class="partner-logo main-logo">
             <img src="images/aws.png" alt="Amazon" class="partner-logo">
-            <img src="images/samsung.svg" alt="Samsung" class="partner-logo">
+            <img src="images/nvidia.svg" alt="Nvidia" class="partner-logo">
             <img src="images/toss.png" alt="Toss" class="partner-logo">
             <img src="images/tesla.png" alt="Tesla" class="partner-logo">
         </div>
