--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             </div>
             <div class="nav-menu">
                 <a onclick="showPage('home')">홈</a>
-                <a onclick="showPage('team')">임원준</a>
+                <a onclick="showPage('team')">임원진</a>
                 <a onclick="showPage('product')">구매하기</a>
                 <a onclick="showPage('contact')">문의</a>
             </div>
