--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
             <img src="images/aws.png" alt="Amazon" class="partner-logo">
             <img src="images/nvidia.svg" alt="Nvidia" class="partner-logo">
             <img src="images/toss.png" alt="Toss" class="partner-logo">
-            <img src="images/spacex.png" alt="spacex" class="partner-logo">
+            <img src="images/spacex.svg" alt="spacex" class="partner-logo">
         </div>
     </section>
 
