--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                             <div id="notification-list">
                                 </div>
                             <div style="margin-bottom:20px; text-align:center;">
-                                <a href="http://project.whanci.xyz" target="_blank" class="live-view-btn">
+                                <a href="https://project.whanci.xyz" target="_blank" class="live-view-btn">
                                     실시간 보기
                                 </a>
                             </div>
