--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                                 </div>
                             <div style="margin-bottom:20px; text-align:center;">
                                 <a href="https://project.whanci.xyz" target="_blank" class="live-view-btn">
-                                    실시간 보기
+                                    체험 해보기
                                 </a>
                             </div>
                         </div>
