--- a/index.html
+++ b/index.html
@@ -339,13 +339,13 @@
         <section class="app-section">
             <div class="app-container">
                 <div class="app-text">
-                    <span style="color: var(--primary-color); font-weight: 700; font-size: 14px; letter-spacing: 1px;">SMART APP CONTROL</span>
-                    <h2 style="font-size: 42px; font-weight: 700; margin: 15px 0 20px; line-height: 1.1;">범인은 이 안에.<br>손안에서 확인하세요.</h2>
+                    <span style="color: var(--primary-color); font-weight: 700; font-size: 14px; letter-spacing: 1px;">Access Anywhere</span>
+                    <h2 style="font-size: 42px; font-weight: 700; margin: 15px 0 20px; line-height: 1.1;">범인은 이 안에.<br>어디서나 확인하세요.</h2>
                     <p style="font-size: 18px; color: #86868b; line-height: 1.6;">
                         누가 내 음료수를 가져갔을까요?<br>
                         SRC-04 전용 앱이 동작 감지 순간을 포착하여<br>
                         스마트폰으로 즉시 알림을 보내드립니다.<br><br>
-                        실시간 라이브 뷰와 지난 기록까지,<br>
+                        최근 감지 기록과 지난 기록까지,<br>
                         터치 한 번으로 확인하세요.
                     </p>
                     <a onclick="showPage('product')" style="display:inline-block; margin-top:30px; color:var(--primary-color); font-weight:600; cursor:pointer; text-decoration:underline;">제품 자세히 보기 ></a>
