--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
             line-height: 1.6;
             word-break: keep-all;
             overflow-x: hidden;
+            /* --- 드래그 방지 --- */
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-use-select: none;
+            user-select: none;
         }
 
         /* --- 네비게이션 --- */
