--- a/index.html
+++ b/index.html
@@ -276,6 +276,44 @@
         /* --- [FOOTER] --- */
         .footer { background-color: var(--bg-light); padding: 80px 24px; border-top: 1px solid #e5e5e5; }
         .footer-content { max-width: 1100px; margin: 0 auto; color: var(--text-sub); font-size: 13px; }
+
+        /* --- HERO 그라데이션 배경 --- */
+.hero {
+    position: relative;
+    overflow: hidden;
+    background: #ffffff; /* 기존 흰 배경 유지 */
+}
+
+/* 움직이는 그라데이션 레이어 */
+.hero::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    z-index: 0;
+
+    background: linear-gradient(
+        120deg,
+        #ffffff,
+        #f2f7ff,
+        #e8f0ff,
+        #ffffff
+    );
+    background-size: 400% 400%;
+    animation: heroGradient 18s ease infinite;
+}
+
+/* 내용이 그라데이션 위로 오도록 */
+.hero > * {
+    position: relative;
+    z-index: 1;
+}
+
+/* 그라데이션 애니메이션 */
+@keyframes heroGradient {
+    0%   { background-position: 0% 50%; }
+    50%  { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+}
     </style>
 </head>
 <body>
