--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         120deg,
         #ffffff 0%,
         #f4f6ff 30%,
-        #eaf1ff 50%,
+        #dde8ff 50%,
         #f5f5f7 70%,
         #ffffff 100%
     );
