--- a/index.html
+++ b/index.html
@@ -7,261 +7,308 @@
 
 <style>
 :root {
-    --primary-color: #0071e3;
-    --text-main: #1d1d1f;
-    --text-sub: #86868b;
-    --bg-light: #f5f5f7;
-    --white: #ffffff;
-    --header-bg: #1d1d1f;
-    --header-text: #fff;
+    --primary-color:#0071e3;
+    --text-main:#1d1d1f;
+    --text-sub:#86868b;
+    --bg-light:#f5f5f7;
+    --white:#ffffff;
+    --header-bg:#1d1d1f;
+    --header-text:#ffffff;
 }
 
-body {
-    font-family: "SF Pro KR", "SF Pro Display", "Apple SD Gothic Neo", sans-serif;
-    margin: 0;
-    background: #fff;
-    color: var(--text-main);
-    line-height: 1.6;
-    overflow-x: hidden;
+*{box-sizing:border-box}
+body{
+    margin:0;
+    font-family:"SF Pro KR","Apple SD Gothic Neo",sans-serif;
+    background:#fff;
+    color:var(--text-main);
+    overflow-x:hidden;
+    user-select:none;
 }
 
-/* =========================
-   NAVBAR
-========================= */
-.navbar {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background: rgba(255,255,255,0.85);
-    backdrop-filter: blur(20px);
-    z-index: 1000;
-    border-bottom: 1px solid rgba(0,0,0,0.08);
+/* NAV */
+.navbar{
+    position:fixed;top:0;width:100%;
+    background:rgba(255,255,255,.8);
+    backdrop-filter:blur(20px);
+    border-bottom:1px solid rgba(0,0,0,.1);
+    z-index:1000;
+}
+.nav-container{
+    max-width:1200px;margin:auto;
+    height:90px;
+    display:flex;align-items:center;justify-content:space-between;
+    padding:0 16px;
+}
+.logo-area{display:flex;align-items:center;cursor:pointer}
+.logo-img{height:50px;margin-right:10px}
+.logo-text{font-size:24px;font-weight:800}
+.nav-menu a{
+    margin-left:20px;
+    font-weight:600;
+    cursor:pointer;
+    text-decoration:none;
+    color:var(--text-main);
+    opacity:.8;
 }
 
-.nav-container {
-    max-width: 1200px;
-    margin: 0 auto;
-    height: 90px;
-    padding: 0 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+/* PAGE */
+.page{display:none;padding-top:90px;animation:fade .4s}
+.page.active{display:block}
+@keyframes fade{from{opacity:0}to{opacity:1}}
+
+/* HERO (정리 완료) */
+.hero{
+    padding:160px 24px;
+    text-align:center;
+    position:relative;
+    overflow:hidden;
+
+    background:linear-gradient(
+        120deg,
+        #ffffff 0%,
+        #f1f5ff 35%,
+        #dbe7ff 50%,
+        #f5f5f7 65%,
+        #ffffff 100%
+    );
+    background-size:300% 300%;
+    animation:heroMove 20s ease-in-out infinite;
+}
+@keyframes heroMove{
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
 }
 
-.logo-text {
-    font-weight: 800;
-    font-size: 24px;
+.typing-container{
+    font-size:clamp(36px,6vw,68px);
+    font-weight:800;
+    letter-spacing:-2px;
+}
+.typing-text::after{content:"|";animation:blink .7s infinite}
+@keyframes blink{50%{opacity:0}}
+
+.hero p{
+    font-size:20px;
+    color:var(--text-sub);
+    margin:20px auto 40px;
+    max-width:800px;
 }
 
-.nav-menu a {
-    margin-left: 22px;
-    font-size: 15px;
-    font-weight: 600;
-    cursor: pointer;
-    text-decoration: none;
-    color: var(--text-main);
+.cta-button{
+    display:inline-block;
+    padding:18px 40px;
+    border-radius:40px;
+    background:var(--primary-color);
+    color:#fff;
+    font-weight:700;
+    text-decoration:none;
+    cursor:pointer;
 }
 
-/* =========================
-   PAGE
-========================= */
-.page {
-    display: none;
-    padding-top: 90px;
+/* SECTION HEADER */
+.section-header{
+    padding:100px 24px 60px;
+    background:var(--header-bg);
+    color:var(--header-text);
+    text-align:center;
+}
+.section-header h2{font-size:42px;margin:0}
+.section-header p{opacity:.8}
+
+/* TEAM */
+.team-container{max-width:1100px;margin:80px auto;padding:0 24px}
+.ceo-card{
+    background:#fbfbfd;
+    padding:60px 24px;
+    border-radius:40px;
+    text-align:center;
+    margin-bottom:60px;
+}
+.profile-initial{
+    width:160px;height:160px;
+    border-radius:50%;
+    background:#e8e8ed;
+    margin:auto;
+    display:flex;align-items:center;justify-content:center;
+    font-size:64px;font-weight:800;
 }
 
-.page.active {
-    display: block;
+/* PRODUCT */
+.product-grid{
+    max-width:1100px;
+    margin:80px auto;
+    display:grid;
+    grid-template-columns:repeat(auto-fit,minmax(340px,1fr));
+    gap:40px;
+    padding:0 24px;
+}
+.product-card{
+    background:#fff;
+    border:1px solid #eee;
+    border-radius:30px;
+    padding:50px;
 }
 
-/* =========================
-   HERO (정적 고급 그라데이션)
-========================= */
-.hero {
-    padding: 170px 24px 160px;
-    text-align: center;
-    background:
-        radial-gradient(1200px 600px at 80% -20%, #e6f0ff 0%, transparent 60%),
-        radial-gradient(1000px 500px at 0% 0%, #f1f6ff 0%, transparent 55%),
-        linear-gradient(180deg, #ffffff 0%, #f5f7ff 55%, #ffffff 100%);
+/* BUY */
+.buy-container{
+    max-width:1100px;
+    margin:60px auto;
+    display:flex;
+    gap:40px;
+    padding:0 24px;
 }
 
-.typing-container {
-    font-size: clamp(40px, 6vw, 72px);
-    font-weight: 800;
-    letter-spacing: -2px;
-    margin-bottom: 24px;
+/* PAYMENT */
+.pay-method-grid{display:grid;gap:12px}
+.pay-btn{
+    padding:18px;
+    border-radius:12px;
+    border:1px solid #ddd;
+    background:#fff;
+    font-weight:600;
+    cursor:pointer;
 }
 
-.hero p {
-    font-size: 20px;
-    color: var(--text-sub);
-    max-width: 820px;
-    margin: 0 auto 50px;
+/* RECEIPT */
+.receipt-card{
+    max-width:500px;
+    margin:60px auto;
+    background:#fff;
+    padding:40px;
+    border-radius:24px;
 }
 
-/* =========================
-   BUTTON
-========================= */
-.cta-button {
-    display: inline-block;
-    background: var(--primary-color);
-    color: #fff;
-    padding: 18px 44px;
-    border-radius: 40px;
-    font-size: 18px;
-    font-weight: 700;
-    cursor: pointer;
-    text-decoration: none;
-    transition: 0.25s ease;
+/* FOOTER */
+.footer{
+    background:#f5f5f7;
+    padding:80px 24px;
+    border-top:1px solid #e5e5e5;
 }
-
-.cta-button:hover {
-    background: #005bb7;
-    transform: translateY(-2px);
-}
-
-/* =========================
-   SECTION HEADER
-========================= */
-.section-header {
-    padding: 110px 24px 70px;
-    background: var(--header-bg);
-    color: var(--header-text);
-    text-align: center;
-}
-
-.section-header h2 {
-    font-size: 44px;
-    margin-bottom: 14px;
-}
-
-.section-header p {
-    opacity: 0.8;
-}
-
-/* =========================
-   FOOTER
-========================= */
-.footer {
-    background: var(--bg-light);
-    padding: 80px 24px;
-    border-top: 1px solid #e5e5e5;
-}
-
-.footer-content {
-    max-width: 1100px;
-    margin: 0 auto;
-    font-size: 13px;
-    color: var(--text-sub);
-    line-height: 1.7;
-}
-
-/* =========================
-   MOBILE
-========================= */
-@media (max-width: 768px) {
-    .nav-container {
-        height: 60px;
-    }
-
-    .logo-text {
-        font-size: 16px;
-    }
-
-    .hero {
-        padding: 130px 20px 120px;
-    }
-
-    .typing-container {
-        font-size: 34px;
-    }
-}
+.footer-content{max-width:1100px;margin:auto;font-size:13px;color:var(--text-sub)}
 </style>
 </head>
 
 <body>
 
 <nav class="navbar">
-    <div class="nav-container">
-        <div onclick="showPage('home')" style="cursor:pointer">
-            <span class="logo-text">공마고의 도둑들</span>
-        </div>
-        <div class="nav-menu">
-            <a onclick="showPage('home')">홈</a>
-            <a onclick="showPage('team')">임원진</a>
-            <a onclick="showPage('product')">구매하기</a>
-            <a onclick="showPage('contact')">문의</a>
-        </div>
+<div class="nav-container">
+    <div class="logo-area" onclick="showPage('home')">
+        <span class="logo-text">공마고의 도둑들</span>
     </div>
+    <div class="nav-menu">
+        <a onclick="showPage('home')">홈</a>
+        <a onclick="showPage('team')">임원진</a>
+        <a onclick="showPage('product')">구매하기</a>
+        <a onclick="showPage('contact')">문의</a>
+    </div>
+</div>
 </nav>
 
 <main id="home" class="page active">
-    <header class="hero">
-        <div class="typing-container">
-            <span id="typewriter"></span>
-        </div>
-        <p>
-            공용 냉장고 무단 취식, 더 이상 감정에 호소하지 마세요.<br>
-            <b>공마고의 도둑들</b>이 완벽한 보안을 제공합니다.
-        </p>
-        <a onclick="showPage('product')" class="cta-button">지금 시작하기</a>
-    </header>
+<header class="hero">
+    <div class="typing-container">
+        <span id="typewriter" class="typing-text"></span>
+    </div>
+    <p>공용 냉장고 무단 취식, 이제 기술로 해결합니다.</p>
+    <a class="cta-button" onclick="showPage('product')">지금 시작하기</a>
+</header>
+</main>
+
+<main id="team" class="page">
+<header class="section-header">
+    <h2>Leading the Future</h2>
+    <p>공용 공간의 신뢰를 설계합니다.</p>
+</header>
+<div class="team-container">
+    <div class="ceo-card">
+        <div class="profile-initial">윤</div>
+        <h3>윤수원</h3>
+        <p>"작은 불편이 문화를 바꾼다"</p>
+    </div>
+</div>
+</main>
+
+<main id="product" class="page">
+<header class="section-header">
+    <h2>Choose Your Plan</h2>
+    <p>필요한 만큼 선택하세요</p>
+</header>
+<section class="product-grid">
+    <div class="product-card">
+        <h3>SRC-04</h3>
+        <p>냉장고 보안 솔루션</p>
+        <button class="cta-button" onclick="showPage('buy')">구매하기</button>
+    </div>
+</section>
+</main>
+
+<main id="buy" class="page">
+<div class="buy-container">
+    <div>
+        <h2>배송 정보</h2>
+        <input id="buyer_name" placeholder="이름"><br><br>
+        <input id="buyer_addr" placeholder="주소"><br><br>
+        <button class="cta-button" onclick="showPage('payment')">결제하기</button>
+    </div>
+</div>
+</main>
+
+<main id="payment" class="page">
+<div style="max-width:400px;margin:60px auto;text-align:center">
+    <h2>결제 수단</h2>
+    <div class="pay-method-grid">
+        <button class="pay-btn" onclick="completeOrder('카카오페이')">카카오페이</button>
+        <button class="pay-btn" onclick="completeOrder('네이버페이')">네이버페이</button>
+    </div>
+</div>
+</main>
+
+<main id="receipt" class="page">
+<div class="receipt-card">
+    <h2>주문 완료</h2>
+    <p id="rec_method"></p>
+    <button class="cta-button" onclick="showPage('home')">메인으로</button>
+</div>
+</main>
+
+<main id="contact" class="page">
+<div style="max-width:800px;margin:80px auto;text-align:center">
+    <h2>Talk to Us</h2>
+    <p>business@gjmst-thives.com</p>
+</div>
 </main>
 
 <footer class="footer">
-    <div class="footer-content">
-        <p><b>(주)공마고의 도둑들</b> | 대표이사: 윤수원</p>
-        <p>충청남도 공주시 유구읍 중앙1길 27-12 | contact@gjmst-thives.com</p>
-        <p style="margin-top:20px;">© 2025 GJMST Thieves. All rights reserved.</p>
-    </div>
+<div class="footer-content">
+    <p>(주)공마고의 도둑들</p>
+    <p>© 2025 Gjmst Thieves</p>
+</div>
 </footer>
 
 <script>
-/* =========================
-   PAGE SWITCH
-========================= */
-function showPage(id) {
-    document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
-    const target = document.getElementById(id);
-    if (target) {
-        target.classList.add('active');
-        window.scrollTo(0, 0);
-    }
+function showPage(id){
+    document.querySelectorAll('.page').forEach(p=>p.classList.remove('active'));
+    document.getElementById(id).classList.add('active');
+    window.scrollTo(0,0);
 }
 
-/* =========================
-   TYPEWRITER
-========================= */
-const textElement = document.getElementById("typewriter");
-const texts = [
-    "기숙사 냉장고의 평화,",
-    "오피스 냉장고의 신뢰,",
-    "기술로 완성합니다."
-];
-
-let i = 0, j = 0, deleting = false;
-
-function type() {
-    const text = texts[i];
-    textElement.textContent = deleting
-        ? text.substring(0, j--)
-        : text.substring(0, j++);
-
-    if (!deleting && j === text.length) {
-        deleting = true;
-        setTimeout(type, 1600);
-        return;
-    }
-
-    if (deleting && j === 0) {
-        deleting = false;
-        i = (i + 1) % texts.length;
-    }
-
-    setTimeout(type, deleting ? 40 : 110);
+function completeOrder(method){
+    document.getElementById('rec_method').innerText="결제 수단: "+method;
+    showPage('receipt');
 }
 
+const texts=["기숙사 냉장고의 평화,","오피스 냉장고의 신뢰,","기술로 완성합니다."];
+let t=0,c=0,d=false;
+const el=document.getElementById("typewriter");
+function type(){
+    const s=texts[t];
+    el.innerText=d?s.slice(0,--c):s.slice(0,++c);
+    if(!d&&c===s.length)setTimeout(()=>d=true,1500);
+    else if(d&&c===0){d=false;t=(t+1)%texts.length}
+    setTimeout(type,d?40:120);
+}
 type();
 </script>
 
